<resources>
    <string name="app_name">Get2Class</string>
    <string name="fall_schedule_button_text">Fall Schedule</string>
    <string name="winter_schedule_button_text">Winter Schedule</string>
    <string name="summer_schedule_button_text">Summer Schedule</string>
    <string name="upload_schedule_button_text">Upload</string>
    <string name="clear_schedule_button_text">Clear</string>
    <string name="course_name_text">…</string>
    <string name="course_format_text">…</string>
    <string name="course_time_text">…</string>
    <string name="course_days_text">…</string>
    <string name="course_location_text">…</string>
    <string name="course_credits_text">…</string>
    <string name="route_button_text">View route to class</string>
    <string name="check_attendance_button_text">Check in to class</string>
    <string name="error">TextView</string>
    <string name="login_button_text">Login</string>
    <string name="welcome_to_get2class_text">Welcome to Get2Class!</string>
    <string name="welcome_text_placeholder">…</string>
    <string name="log_out_button_text">Log out</string>
    <string name="settings_button_text">Settings</string>
    <string name="karma_button_text">Karma</string>
    <string name="schedules_button_text">Schedules</string>
    <string name="your_karma_text">Your Karma</string>
    <string name="karma_text">Karma:</string>
    <string name="karma_value_placeholder">…</string>
    <string name="user_settings_text">User Settings</string>
    <string name="minutes_hint_text">Minutes</string>
    <string name="notification_reminder_time_mins_text">Notification Reminder Time (mins)</string>
    <string name="save_settings_button_text">Save</string>
    <string name="schedule_view_text">Schedule:</string>
    <string name="your_schedules_title_text">Your Schedules</string>
    <string name="icon_description">icon</string>
</resources>