<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18181B"
    tools:content=".SettingsActivity">

    <TextView
        android:id="@+id/karma_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_settings_text"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Switch
        android:id="@+id/notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Notifications     "
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:thumbTint="@drawable/switch_thumb"
        android:trackTint="@drawable/switch_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/edit_minutes"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/minutes_hint_text"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/notification_reminder_time_mins_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings_button_text"
        android:backgroundTint="#0066ce"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp"
        app:cornerRadius="10dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

</androidx.constraintlayout.widget.ConstraintLayout>