<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18181B"
    tools:content=".ScheduleListActivity">

    <TextView
        android:id="@+id/schedule_list_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Your Schedules"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/fall_schedule"
        android:layout_width="225dp"
        android:layout_height="74dp"
        android:layout_marginTop="304dp"
        android:backgroundTint="#ff9a00"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/fall_schedule_button_text"
        android:textSize="24sp"
        android:typeface="normal"
        app:cornerRadius="20dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/winter_schedule"
        android:layout_width="225dp"
        android:layout_height="74dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#0066ce"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/winter_schedule_button_text"
        android:textSize="24sp"
        android:typeface="normal"
        app:cornerRadius="20dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fall_schedule" />

    <Button
        android:id="@+id/summer_schedule"
        android:layout_width="225dp"
        android:layout_height="74dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#C81818"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/summer_schedule_button_text"
        android:textSize="24sp"
        android:typeface="normal"
        app:cornerRadius="20dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winter_schedule" />

</androidx.constraintlayout.widget.ConstraintLayout>